// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdtocs generates table of contents for markdown with all heading levels 1`] = `
"- [Heading 1](#heading-1)
  - [Heading 2](#heading-2)
    - [Heading 3](#heading-3)
      - [Heading 4](#heading-4)
        - [Heading 5](#heading-5)
          - [Heading 6](#heading-6)
"
`;

exports[`mdtocs generates table of contents for markdown with alternative headings 1`] = `
"- [Heading 1](#heading-1)
  - [Heading 2](#heading-2)
- [Heading 1](#heading-1-1)
  - [Heading 2](#heading-2-1)
"
`;

exports[`mdtocs generates table of contents for markdown with heading with bold text 1`] = `
"- [**Bold heading**](#bold-heading)
"
`;

exports[`mdtocs generates table of contents for markdown with heading with invalid characters 1`] = `
"- [˙eådin©! @ #](#edin--)
"
`;

exports[`mdtocs generates table of contents for markdown with headings 1`] = `
"        - [Heading level 6](#heading-level-6)
      - [Heading with tab](#heading-with-tab)
      - [Heading with spaces](#heading-with-spaces)
- [Heading level 1](#heading-level-1)
- [Heading Level 1!](#heading-level-1-1)
- [Alternate heading Level 1](#alternate-heading-level-1)
  - [Alternate  heading  level  2](#alternate--heading--level--2)
  - [###](#)
- [#](#-1)
"
`;

exports[`mdtocs generates table of contents for markdown with headings with the same fragment 1`] = `
"- [A Heading](#a-heading)
- [A Heading](#a-heading-1)
  - [a heading?](#a-heading-2)
  - [A HEADING!](#a-heading-3)
"
`;

exports[`mdtocs generates table of contents for markdown with nested heading 1`] = `
"  - [Heading 2](#heading-2)
      - [Heading 4](#heading-4)
- [Heading 1](#heading-1)
    - [Heading 3](#heading-3)
        - [Heading 5](#heading-5)
          - [Heading 6](#heading-6)
"
`;

exports[`mdtocs generates table of contents for markdown with single heading 1`] = `
"- [Heading](#heading)
"
`;
